# shell-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  readme.md  setup.cfg
docs/: dev.md  roadmap.md
scripts/: find-empty-folders.py  generate-file.py
shell_tools/: cli.py
shell_tools/dirs/: __init__.py  find_empty_dirs.py  search.py
shell_tools/files/: __init__.py  generate_file.py  random.py
shell_tools/git/: misc.py  sync_repos.py
tests/: cli.py
tests/dirs/: search.py
tests/files/: random.py
tests/git/: misc.py
