[metadata]
name = shell-utils
version = 1.0.0
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = set of python applications/scripts for different purposes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/utils-scripts
license = MIT
license_file = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
python_requires = >=3.10

[options.entry_points]
console_scripts =
    generate-file = scripts.generate-file:run
