[metadata]
name = shell-tools
version = 1.0.1
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = set of python applications/scripts for different purposes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/shell-tools
license = MIT
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    click

[options.entry_points]
console_scripts =
    generate-file = shell_tools.files.generate_file:cli
    find-empty-dirs = shell_tools.dirs.find_empty_dirs:cli
